# article-marching-cubes

./: LICENCENOTE.md  LICENSE  README.md
marchingCubes/: CMakeLists.txt
marchingCubes/headers/: cubeLattice3D.h  cubeLattice3D.hpp  cubeLatticeScalarField3D.h  cubeLatticeScalarField3D.hpp  latticeData3D.h  latticeData3D.hpp  mcubes.h  point3D.h  shaders.h  shadersDefinitions.h  sphere.h  triangle3D.h
marchingCubes/src/: main.cpp  point3D.cpp  shaders.cpp  sphere.cpp  triangle3D.cpp
